--- a/RaftServer/conf/application.conf
+++ b/RaftServer/conf/application.conf
@@ -32,7 +32,19 @@ akka {
   #
   # And then uncomment this line to debug the configuration.
   #
-  #log-config-on-start = true
+  # log-config-on-start = true
+
+  # actor {
+  #   serializers {
+  #     jackson-json = "akka.serialization.jackson.JacksonJsonSerializer"
+  #   }
+  #
+  #   serialization-bindings {
+  #     # Commands won't use play-json but Akka's jackson support.
+  #     # See https://doc.akka.io/docs/akka/2.6/serialization-jackson.html
+  #     "com.stakkato95.raft.behavior.base.BaseCommand" = jackson-json
+  #   }
+  # }
 }
 
 ## Secret key
