--- a/.gitignore
+++ b/.gitignore
@@ -122,3 +122,22 @@ project/plugins/project/
 .lib/
 
 .DS_Store
+
+
+# React
+
+.idea/
+.vscode/
+node_modules/
+build
+.DS_Store
+*.tgz
+my-app*
+template/src/__tests__/__snapshots__/
+lerna-debug.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+/.changelog
+.npm/
+yarn.lock
