--- a/RaftServer/conf/application.conf
+++ b/RaftServer/conf/application.conf
@@ -245,6 +245,7 @@ play.filters {
   # Enabled filters are run automatically against Play.
   # CSRFFilter, AllowedHostFilters, and SecurityHeadersFilters are enabled by default.
   # enabled += filters.ExampleFilter
+  enabled += play.filters.cors.CORSFilter
 
   # Disabled filters remove elements from the enabled list.
   #disabled += filters.ExampleFilter
@@ -270,6 +271,7 @@ play.filters {
 
     # The allowed origins. If null, all origins are allowed.
     #allowedOrigins = ["https://www.example.com"]
+    allowedOrigins = ["http://localhost:3000"]
 
     # The allowed HTTP methods. If null, all methods are allowed
     #allowedHttpMethods = ["GET", "POST"]
